# victoria_perception

./: .travis.yml  CMakeLists.txt  README.md  package.xml  publish_image_node.cpp
action/: Kmeans.action
cfg/: cone_detector.cfg
include/cone_detector/: cone_detector.h
include/kmeans/: kmeans.h
include/kmeans_service/: kmeans_service.h
launch/: android_image_pub.launch  cone_detector.launch  kmeans.launch  kmeans_service.launch  publish_image.launch
msg/: ObjectDetector.msg
src/: #cone_detector.cpp#  .#cone_detector.cpp  TODO.txt  cone_detector.cpp  cone_detector_node.cpp  invoke_kmeans_action_node.cpp  kmeans.cpp  kmeans_action_node.cpp  kmeans_service.cpp  kmeans_service_node.cpp  publish_image_node.cpp
srv/: AnnotateDetectorImage.srv  CalibrateConeDetection.srv  ComputeKmeans.srv
test/: CMakeLists.txt  kmeans_action.test  kmeans_action_test.cpp
