<package format="2">
  <name>victoria_perception</name>
  <version>0.0.0</version>
  <description>The victoria_perception package</description>

  <maintainer email="mike@webself.com">wimble</maintainer>

  <license>MIT</license>

  <author email="mike@webself.com">wimble</author>


  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <!--depend>Boost</depend-->
  <build_depend>camera_info_manager</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <!--depend>OpenCV</depend-->
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>topic_tools</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
